
[package]
name = "nsdq-util"
authors = ["j-stach"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/j-stach/nsdq-util"
description = "Types and helper functions for implementing NASDAQ protocols."
keywords = ["ouch", "nasdaq", "trading", "finance"]
categories = ["network-programming", "finance"]

exclude = [".git/**", "test/**", "TODO.md"]

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
nom = "8.0.0"
num-traits = { version = "0.2.19", default-features = false }

[[test]]
name = "tests"
path = "test/mod.rs"
